# kuka-iiwa-research

./: README.md
cor_tud_controllers/: CMakeLists.txt  package.xml
cor_tud_controllers/config/: controller.yaml  iiwa14.yaml  iiwa14_service.yaml  iiwa7.yaml  iiwa7_service.yaml
cor_tud_controllers/launch/: bringup_hand.launch  bringup_local.launch  bringup_remote.launch  control.launch  drivers.launch  gazebo.launch.orig  gazebo_drivers.launch  namespace.launch
cor_tud_controllers/python/: add_namespace.py  gravity_compensation.py  iiwa_robotics_toolbox.py  inverse_kinematics.py  print_pose.py  record_data_navigation_cic copy.py  request_cartesian_pose.py  request_joint_position.py  softhand2_test.py  softhand_test.py  spacenav_control.py  stay.py
cor_tud_controllers/python/LfD/: README.txt  control_robot_reproduce_joints.py  demonstrations_postprocessing.ipynb  demonstrations_subsample.py  demonstrations_to_ee.py  iiwa_robotics_toolbox.py  record_demo_joint_state.py
cor_tud_controllers/python/LfD/PUMA/: puma_control.py
cor_tud_controllers/python/bringup/: cartesian_state_publisher.py  control_server.py  robot_request_server.py
cor_tud_controllers/python/low_level_controllers/: cartesian_ik_control.py  cartesian_impedance_control.py  joint_impedance_control.py
cor_tud_controllers/python/low_level_controllers/parameters/: joint_impedance_parameters_iiwa7_pouring_demo.py  joint_impedance_parameters_safe_iiwa14.py  joint_impedance_parameters_safe_iiwa7.py
cor_tud_controllers/python/settings_ranged_ik/: settings_iiwa14.yaml  settings_iiwa7.yaml
cor_tud_controllers/rviz/: iiwa14.rviz
cor_tud_controllers/urdf/: gazebo.xacro  generate_matlab_urdf.md  iiwa14.urdf.xacro  iiwa14.xacro  iiwa7.urdf.xacro  iiwa7.xacro  matlab_iiwa7.urdf  test.py
cor_tud_msgs/: CMakeLists.txt  README.md  package.xml
cor_tud_msgs/action/: Controller.action  RecordTopic.action  SetJointPose.action
cor_tud_msgs/msg/: CartesianState.msg  ControlRequest.msg
docs/: CONTRIBUTING.md  set_IPs_windows_machine.txt
docs/maps/: KUKAs diagrams.mathcha  README.md
iiwa_description/launch/: iiwa7_upload.launch
iiwa_driver/config/: iiwa.yaml
iiwa_driver/launch/: iiwa_bringup.launch  iiwa_setup.launch
iiwa_driver/src/: iiwa.cpp
iiwa_gazebo/: iiwa_robot_hw_sim_plugins.xml
iiwa_gazebo/src/: gravity_compensation_hw_sim.cpp
iiwa_tools/config/: iiwa_service.yaml
iiwa_tools/src/: iiwa_service.cpp
